maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: identifier expected but integer literal found.
	var resu = new Array(Int)[8]
                                  ^JediEscaper:22: error: ']' expected but ';' found.
	if ((!aMurNord(f,g)) && (getIndication(f,g-1) == 9999)) {
^